fixing hamburger position on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -559,7 +559,7 @@ body.sleeping #title .spacer {
         font-size: 20px;
     }
     #title svg {
-        margin-top: 28px;
+        margin-top: 10px;
     }
     noscript {
         line-height: 30px;
